<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="15dp"
    android:id="@+id/recipe_detail"
    android:elevation="10dp"
    android:background="#f1f2f6"
    tools:context=".RecipeDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#f1f2f6"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/rd_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/rd_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rd_prep"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prep" />

        <TextView
            android:id="@+id/rd_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cook" />

        <TextView
            android:id="@+id/rd_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/servings" />

        <TextView
            android:id="@id/rd_ing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rd_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/rd_inst_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/instructions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rd_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>